app/globals.css
html,
body {
  margin: 0;
}

body {
  background-color: #424242;
  color: #ffffe3;
  font-family: monospace;
}

.sidebar {
  background-color: #313131;
  height: 100vh;
  width: 20%;
  position: fixed;
  overflow: scroll;
  padding: 5px;
  box-sizing: border-box;
}

.sidebar button {
  width: 100%;
}

.sidebar h1 {
  text-align: center;
}

.editor {
  height: 100vh;
  width: 80%;
  position: fixed;
  overflow: scroll;
  right: 0;
}

#fragmentEditor {
  height: 50vh;
  border-bottom: 1px solid black;
  box-sizing: border-box;
  overflow: scroll;
}

#templateEditor {
  height: 50vh;
  box-sizing: border-box;
}

#templateEditor form {
  display: inline-block;
  height: 100%;
}

.buttonRow {
  display: flex;
  height: 10%;
}

#updateTemplate {
  width: 80%;
}

#deletePrompt {
  width: 20%;
  border-left: 1px solid black;
  box-sizing: border-box;
}

#templateEditor textarea,
#templateEditor input[type="text"] {
  width: 80vw;
  box-sizing: border-box;
  display: block;
  resize: none;
  border: none;
  outline: none;
  background-color: #3a3a3a;
  color: inherit;
}

#templateEditor textarea {
  height: 85%;
}

#templateEditor input[type="text"] {
  height: 5%;
  border-bottom: 1px solid black;
  font-family: inherit;
}

#templateEditor button {
  height: 100%;
  width: 100%;
}

button {
  background-color: #4a4a4a;
  color: inherit;
  border: none;
  cursor: pointer;
  font-family: inherit;
}

button:active {
  background-color: #6f6f6f;
}

.sidebar ul {
  margin-left: 2;
  padding-left: 0;
}

.sidebar li {
  list-style-type: none;
  text-align: left;
}

.sidebar li a {
  color: inherit;
  text-decoration: none;
  width: 100%;
  display: block;
}

.sidebar li:hover {
  background-color: #424242;
}

#fragmentEditor label {
  display: block;
  margin: 5px;
}

#fragmentEditor input {
  outline: none;
  border: 1px solid black;
  border-radius: 5px;
  padding: 5px;
  background-color: #3a3a3a;
  color: inherit;
  font-family: inherit;
}

#fragmentEditor button {
  padding: 5px;
  margin: 5px;
  border: 1px solid black;
  border-radius: 5px;
}

#compiledPrompt {
  padding: 5px;
  margin: 5px;
  background-color: #3a3a3a;
  border: 1px solid black;
  border-radius: 5px;
}

